folder structure updated

--- a/HTML/cards.html
+++ b/HTML/cards.html
@@ -27,7 +27,7 @@
         </div>
 
         <nav>
-            <a href="home.html">Home</a>
+            <a href="../index.html">Home</a>
             <a href="navigation.html">Navigation</a>
             <a href="cards.html" aria-current="page" style="color:#fff">Cards</a>
             <a href="loading.html">Loaders</a>
