--- a/HTML/hero.html
+++ b/HTML/hero.html
@@ -15,10 +15,11 @@
 </head>
 
 <body>
+
     <header>
         <div class="logo">Animatrix</div>
         <nav>
-            <a href="Website.html">Home</a>
+            <a href="../index.html">Home</a>
             <a href="buttons.html">Buttons</a>
         </nav>
     </header>
