--- a/HTML/navigation.html
+++ b/HTML/navigation.html
@@ -27,11 +27,10 @@
         </div>
 
         <nav class="topnav" aria-label="Primary">
-            <a href="home.html">Home</a>
+            <a href="../index.html">Home</a>
             <a href="cards.html">Cards</a>
             <a href="loading.html">Loaders</a>
             <a href="navigation.html" aria-current="page" style="color:#fff">Navigation</a>
-            <a href="text and background.html">Text & BG</a>
         </nav>
     </header>
 
