--- a/index.html
+++ b/index.html
@@ -27,14 +27,14 @@
     </div>
 
     <nav aria-label="Main navigation">
-      <a href="home.html" class="navlink">Home</a>
-      <a href="navigation.html" class="navlink">Navigation</a>
-      <a href="cards.html" class="navlink">Cards</a>
-      <a href="loading.html" class="navlink">Loaders</a>
-      <a href="buttons.html" class="navlink">Buttons</a>
-      <a href="forms.html" class="navlink">Forms</a>
-      <a href="widgets.html" class="navlink">Widgets</a>
-      <a href="hero.html" class="navlink">Hero</a>
+      <a href="index.html" class="navlink">Home</a>
+      <a href="./HTML/navigation.html" class="navlink">Navigation</a>
+      <a href="./HTML/cards.html" class="navlink">Cards</a>
+      <a href="./HTML/loading.html" class="navlink">Loaders</a>
+      <a href="./HTML/buttons.html" class="navlink">Buttons</a>
+      <a href="./HTML/forms.html" class="navlink">Forms</a>
+      <a href="./HTML/widgets.html" class="navlink">Widgets</a>
+      <a href="./HTML/hero.html" class="navlink">Hero</a>
 
       <div class="search" role="search" aria-label="Search animations">
         <svg width="16" height="16" viewBox="0 0 24 24" fill="none" style="opacity:0.9">
