--- a/HTML/loading.html
+++ b/HTML/loading.html
@@ -27,11 +27,10 @@
         </div>
 
         <nav>
-            <a href="home.html">Home</a>
+            <a href="../index.html">Home</a>
             <a href="navigation.html">Navigation</a>
             <a href="cards.html">Cards</a>
             <a href="loading.html" aria-current="page" style="color:#fff">Loaders</a>
-            <a href="text and background.html">Text & BG</a>
         </nav>
     </header>
 
