--- a/HTML/widgets.html
+++ b/HTML/widgets.html
@@ -19,7 +19,7 @@
     <header>
         <div class="logo">Animatrix</div>
         <nav>
-            <a href="home.html">Home</a>
+            <a href="../index.html">Home</a>
             <a href="navigation.html">Navigation</a>
             <a href="cards.html">Cards</a>
             <a href="loading.html">Loaders</a>
